
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int zval ;
struct tl_tree {int dummy; } ;


 int DEC_REF (void*) ;
 int TLUNI_NEXT ;
 scalar_t__ TLUNI_OK ;
 scalar_t__ TLUNI_START (void**,void**,int **,struct tl_tree**) ;
 int fprintf (int ,char*,int,...) ;
 int ** get_field (int *,int ,int) ;
 int stderr ;
 int var_nat_const_to_int (void*) ;

void *tlcomb_store_array (void **IP, void **Data, zval **arr, struct tl_tree **vars) {
  void **newIP = *(IP ++);
  int multiplicity = var_nat_const_to_int (*(--Data));



  DEC_REF (*Data);
  int i;
  for (i = 0; i < multiplicity; i++) {
    zval **w = get_field (*arr, 0, i);



    if (!w) { return 0; }
    *(++arr) = *w;
    if (TLUNI_START (newIP, Data, arr, vars) != TLUNI_OK) {
      -- arr;
      return 0;
    }
    -- arr;
  }
  TLUNI_NEXT;
}
